<resources>
    <string name="app_name">Calculator</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number0">0</string>
    <string name="decimal">.</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="addition">+</string>
    <string name="equal">=</string>
    <string name="subtraction">-</string>
    <string name="initialResultText"></string>
    <string name="c">C</string>
    <string name="text">Keep calm and use a calculator</string>
</resources>
